# tradingapi

./: .gitignore  Dockerfile.streamlit  README.md  deploy-streamlit.ps1  main.py  pyproject.toml  security-mitigations.ps1
.streamlit/: secrets.toml.example
advisor_agent/: agent.py
data/: advisor_report.md  audit_log.jsonl  buy.xlsx  buy_research_todays_reco.csv  buy_with_cmp.csv  buy_with_cmp_20260408_085723.csv  buy_with_cmp_20260408_085918.csv  candle_recommendations.csv  holdings.csv  order_book.csv  order_book_backup.csv  research_data.csv  research_data_backup.csv  s_sold.xlsx  sell_research_todays_reco.csv  sold_stocks_analysis.csv  tips_research_data.csv  tips_research_generation.md  tips_research_report.md  (+4 more)
gemini_adk_agents/: .gitignore  Dockerfile  README.md  api_server.py  client.py  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
gemini_adk_agents/agents/: __init__.py  analyst_agent.py  base_agent.py  research_agent.py
gemini_adk_agents/agents/.adk/: README.md
gemini_adk_agents/deploy/: deploy.ps1  deploy.sh  service.yaml
gemini_adk_agents/docs/: DEPLOYMENT.md
gemini_adk_agents/llm/: __init__.py  gemini_config.py  vertex_config.py
gemini_adk_agents/model_schemas/: __init__.py  schemas.py
gemini_adk_agents/prompts/system_prompts/: analyst_agent.md  research_agent.md
gemini_adk_agents/prompts/task_prompts/: market_analysis.md  stock_research.md
gemini_adk_agents/skills/analysis/: SKILL.md
gemini_adk_agents/skills/research/: SKILL.md
gemini_adk_agents/tools/: __init__.py  data_tool.py  search_tool.py  web_scraper.py
(+46 files in other folders)
