[project]
name = "gemini-adk-agents"
version = "0.1.0"
description = "AI Agents built with Google ADK, Gemini, and Vertex AI"
requires-python = ">=3.10"

[project.dependencies]
google-adk = ">=0.1.0"
google-generativeai = ">=0.5.0"
google-cloud-aiplatform = ">=1.40.0"
vertexai = ">=1.0.0"
python-dotenv = ">=1.0.0"
requests = ">=2.31.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
